# RoadSense

./: .gitignore  README.md
RoadSense-Library/: RabbitMQClient.cpp  RabbitMQClient.h
assets/: system_architecture.drawio
assets/diagrams/: iot_data_pipeline.drawio
docs/report/: roadsense_report.tex
docs/specification/: project_specifications.tex
roadsense-api/: .env.example  Cargo.toml  README.md
roadsense-api/src/: db.rs  main.rs  models.rs  routes.rs
roadsense-api/src/models/: bumprecord.rs
roadsense-api/src/routes/: bumps.rs
roadsense-backend/: Cargo.toml
roadsense-consumer/: .env.example  Cargo.toml  README.md  diesel.toml
roadsense-consumer/migrations/2024-12-11-160958_create_bump_records/: up.sql
roadsense-consumer/scripts/: body.json  fill-queue.sh  test_db.sh
roadsense-consumer/src/: config.rs  main.rs  message.rs  model.rs  osrm.rs  rabbit.rs  schema.rs  validation.rs
roadsense-consumer/src/model/: bumprecord.rs  geography.rs
roadsense-diesel/: .env.example  Cargo.toml  README.md  diesel.toml
roadsense-embedded/: Makefile  RabbitMQClient.h  SegmentQuality.h  config.yml  roadqualifier.h  roadsense-embedded.ino  roadsense-embedded_notCompilable  roadsense.ino
roadsense-frontend/: .env.example  .gitignore  README.md  bun.lockb  example.docker-compose.yml  package-lock.json  package.json
roadsense-gateway/: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  rabbit.docker-compose.yml  traefik.docker-compose.yaml  traefik.docker-compose.yml
specification/: Makefile  project_specification.md
(+71 files in other folders)
