[package]
name = "roadsense-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.6", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.39", features = ["serde"] }
actix-cors = "0.7.0"
postgis_diesel = { version = "2.4.1", features = ["serde"] }

# Load other subproject containing diesel types
roadsense-diesel = { path = "../roadsense-diesel" }
