[package]
name = "roadsense-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-lite = "2.5.0"
lapin = "2.5.0"
log = "0.4.22"
tokio = { version = "1.41.1", features = ["full"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono"] }
postgis_diesel = { version = "2.4.1", features = ["serde"] }
serde = "1.0.216"
serde_json = "1.0.133"
chrono = "0.4.39"

# Load other subproject containing diesel types
roadsense-diesel = { path = "../roadsense-diesel" }
